syntax = "proto3";
package org.roylance.yaclib;

enum RepositoryType {
    BINTRAY = 0;
    ARTIFACTORY = 1;
    NPMJS = 2;
    PRIVATE_NPM = 3;
    NUGET = 4;
    PRIVATE_NUGET = 5;
    PIP = 6;
    PRIVATE_PIP = 7;
}

enum DependencyType {
    INTERNAL = 0;
    JAVA = 1;
    TYPESCRIPT = 2;
    CSHARP = 3;
    SWIFT = 4;
}

enum FileExtension {
    KT_EXT = 0;
    JAVA_EXT = 1;
    TYPESCRIPT_EXT = 2;
    JAVASCRIPT_EXT = 3;
    SWIFT_EXT = 4;
    POM_EXT = 5;
    XML_EXT = 6;
    HTML_EXT = 7;
    GRADLE_EXT = 8;
    JSON_EXT = 9;
    TS_EXT = 10;
    NONE_EXT = 11;
    BAT_EXT = 12;
    JS_EXT = 13;
    CS_EXT = 14;
    SLN_EXT = 15;
    XPROJ_EXT = 16;
    SH_EXT = 17;
}

enum FileUpdateType {
    OVERWRITE = 0;
    WRITE_IF_NOT_EXISTS = 1;
}

message Repository {
    string url = 1;
    string username = 2;
    bool is_private = 7;
    string name = 8;
    RepositoryType repository_type = 9;
}

message Dependency {
    DependencyType type = 1;
    string group = 2;
    string name = 3;
    Repository repository = 5;
    string typescript_model_file = 6;
    string node_alias_name = 9;
    string third_party_dependency_version = 11;
    int32 major_version = 12;
    int32 minor_version = 13;
    string github_repo = 14;
    string author_name = 15;
    string license = 16;
}

message File {
    string full_directory_location = 1;
    string file_name = 2;
    FileExtension file_extension = 3;
    string file_to_write = 4;
    FileUpdateType file_update_type = 5;
}

message Controller {
    string name = 1;
    repeated Action actions = 2;
}

message Action {
    string name = 1;
    repeated Message inputs = 2;
    Message output = 5;
}

message Message {
    string argument_name = 1;
    string file_package = 2;
    string file_class = 3;
    string message_package = 4;
    string message_class = 5;
}

message AllFiles {
    repeated File files = 1;
}

message AllControllers {
    repeated Controller controllers = 1;
}

message ControllerDependency {
    AllControllers controllers = 1;
    Dependency dependency = 2;
}

message AllControllerDependencies {
    repeated ControllerDependency controller_dependencies = 1;
}